--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -1,42 +1,20 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "https://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="https://www.w3.org/1999/xhtml">
 <head>
-<meta charset='utf-8'>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 <title>TestNG Report</title>
-<style type="text/css">
-table {margin-bottom:10px;border-collapse:collapse;empty-cells:show}
-td,th {border:1px solid #009;padding:.25em .5em}
-.result th {vertical-align:bottom}
-.param th {padding-left:1em;padding-right:1em}
-.param td {padding-left:.5em;padding-right:2em}
-.stripe td,.stripe th {background-color: #E6EBF9}
-.numi,.numi_attn {text-align:right}
-.total td {font-weight:bold}
-.passedodd td {background-color: #0A0}
-.passedeven td {background-color: #3F3}
-.skippedodd td {background-color: #CCC}
-.skippedodd td {background-color: #DDD}
-.failedodd td,.numi_attn {background-color: #F33}
-.failedeven td,.stripe .numi_attn {background-color: #D00}
-.stacktrace {white-space:pre;font-family:monospace}
-.totop {font-size:85%;text-align:center;border-bottom:2px solid #000}
-</style>
+<style type="text/css">table {margin-bottom:10px;border-collapse:collapse;empty-cells:show}th,td {border:1px solid #009;padding:.25em .5em}th {vertical-align:bottom}td {vertical-align:top}table a {font-weight:bold}.stripe td {background-color: #E6EBF9}.num {text-align:right}.passedodd td {background-color: #3F3}.passedeven td {background-color: #0A0}.skippedodd td {background-color: #DDD}.skippedeven td {background-color: #CCC}.failedodd td,.attn {background-color: #F33}.failedeven td,.stripe .attn {background-color: #D00}.stacktrace {white-space:pre;font-family:monospace}.totop {font-size:85%;text-align:center;border-bottom:2px solid #000}.invisible {display:none}</style>
 </head>
 <body>
-<table cellspacing="0" cellpadding="0" class="testOverview">
-<tr><th>Test</th><th>Methods<br/>Passed</th><th>Scenarios<br/>Passed</th><th># skipped</th><th># failed</th><th>Total<br/>Time</th><th>Included<br/>Groups</th><th>Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em"><a href="#t1">Test</a></td><td class="numi">3</td><td class="numi">3</td><td class="numi">0</td><td class="numi">0</td><td class="numi">13.1 seconds</td><td class="numi">dailyTest </td><td class="numi"></td></tr>
+<table>
+<tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
+<tr><th colspan="8">Test Suit</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">31,717</td><td>test3</td><td></td></tr>
 </table>
-<table cellspacing="0" cellpadding="0" class="methodOverview" id="summary">
-<tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr id="t1"><th colspan="5">Test &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="3">com.ucode_academy.test.day_16_testng_parallel_test_generate_report.ParallelTesting</td><td><a href="#m1"><b>amazonTest</b> (dailyTest) </a></td><td class="numi">1</td><td>1700181774607</td><td class="numi">11670</td></tr><tr class="passedodd"><td><a href="#m2"><b>googleTest</b> (dailyTest) </a></td><td class="numi">1</td><td>1700181774607</td><td class="numi">10225</td></tr><tr class="passedodd"><td><a href="#m3"><b>facebookTest</b> (dailyTest) </a></td><td class="numi">1</td><td>1700181774607</td><td class="numi">13008</td></tr>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Test Suit</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.ucode_academy.test.day_16_testng_parallel_test_generate_report.DataProviderTest</td><td><a href="#m0">testInMultiEnvironment</a></td><td rowspan="3">1700189208249</td><td rowspan="3">13403</td></tr><tr class="passedeven"><td><a href="#m1">testInMultiEnvironment</a></td></tr><tr class="passedeven"><td><a href="#m2">testInMultiEnvironment</a></td></tr></tbody>
 </table>
-<h1>Test</h1>
-<h2 id="m1">com.ucode_academy.test.day_16_testng_parallel_test_generate_report.ParallelTesting:amazonTest</h2>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m2">com.ucode_academy.test.day_16_testng_parallel_test_generate_report.ParallelTesting:googleTest</h2>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m3">com.ucode_academy.test.day_16_testng_parallel_test_generate_report.ParallelTesting:facebookTest</h2>
-<p class="totop"><a href="#summary">back to summary</a></p>
-</body></html>
+<h2>Test</h2><h3 id="m0">com.ucode_academy.test.day_16_testng_parallel_test_generate_report.DataProviderTest#testInMultiEnvironment</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>https://www.amazon.com/</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.ucode_academy.test.day_16_testng_parallel_test_generate_report.DataProviderTest#testInMultiEnvironment</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>https://www.google.com/</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.ucode_academy.test.day_16_testng_parallel_test_generate_report.DataProviderTest#testInMultiEnvironment</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>https://www.facebook.com/</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+</body>
+</html>
